third_party/move/move-prover/tests/sources/functional/closures/inline/opaque_inline_body_fail.exp
Move prover returns: exiting with verification errors
error: post-condition does not hold
   ┌─ tests/sources/functional/closures/inline/opaque_inline_body_fail.move:12:9
   │
12 │         ensures result == x + 1; // error: post-condition does not hold (body adds 2)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/closures/inline/opaque_inline_body_fail.move:6: inc
   =         x = <redacted>
   =     at tests/sources/functional/closures/inline/opaque_inline_body_fail.move:7: inc
   =         result = <redacted>
   =     at tests/sources/functional/closures/inline/opaque_inline_body_fail.move:11: inc (spec)
   =     at tests/sources/functional/closures/inline/opaque_inline_body_fail.move:12: inc (spec)
